# smppai

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/prompts/: general-code-review.md.prompt.md  general-remove-duplicates.md.prompt.md  project-smpp-development.md.prompt.md  python-async-programming.md.prompt.md  python-class-design.md.prompt.md  python-function.md.prompt.md  python-testing.md.prompt.md
.github/workflows/: ci.yml  release.yml  starter.yaml  validate-commits.yml
docs/: ci-cd-pipeline.md
examples/: README.md  client.py  graceful_server.py  server.py
requirements/: all.txt  dev.txt
scripts/: demo1.py
smppai/: __init__.py  config.py  esme.py  log.py  session.py
smppai/_smpplib/: client.py
smppai/experiment/: app1.py  app2.py  async_client.py  client.py  log.py  session.py  url.py
smppai/smpp/: __init__.py  const.py  decoder.py  encoder.py  operations.py  proto.py
smppai/smsc/: app.py
src/smpp/: __init__.py  exceptions.py  utils.py
src/smpp/client/: __init__.py  client.py
src/smpp/config/: __init__.py  base.py  defaults.py  settings.py  validation.py
src/smpp/protocol/: __init__.py  codec.py  constants.py  validation.py
src/smpp/protocol/pdu/: __init__.py  base.py  bind.py  factory.py  message.py  session.py
src/smpp/server/: __init__.py  server.py
src/smpp/transport/: __init__.py  connection.py
src/smppai/: __init__.py  config.py  proto.py  session.py
src/smppai/smpp/: decoder.py  encoder.py  helpers.py
src/smppai_rye/: __init__.py
tests/: __init__.py  conftest.py  test_session.py  test_smppai.py
tests/integration/: test_shutdown_integration.py
tests/smpp/: samples.py  test_samples.py  test_smpp.py
tests/smsc/: test_client.py
tests/unit/: __init__.py
tests/unit/client/: test_client.py
tests/unit/protocol/: test_codec.py  test_validation.py
tests/unit/protocol/pdu/: __init__.py  test_base.py  test_bind.py  test_factory.py  test_message.py  test_session.py
tests/unit/server/: test_server.py
tests/unit/transport/: test_connection.py
