[project]
name = "smppai-rye"
version = "0.1.0"
description = "SMPP protocol implementation, ESME, SMSC"
authors = [
    { name = "codcod", email = "nikos@linux.com" }
]
dependencies = [
    "smpplib>=2.2.3",
    "rich>=13.6.0",
]
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["smpp", "protocol", "esme", "smsc", "gsm", "sms"]
# license = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]

[tool.rye.scripts]
lint = { chain = [
    "lint:isort",
    "lint:black",
    "lint:flake8",
    "lint:ruff"
]}
"lint:isort" = "isort src/smppai"
"lint:black" = "black src/smppai"
"lint:flake8" = "flake8 src/smppai"
"lint:ruff" = "ruff src/smppai"

demo1 = "python scripts/demo1.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.2",
    "pytest-coverage>=0.0",
    "ruff>=0.1.5",
    "pytest-asyncio>=0.21.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
skip-string-normalization = 1
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py       # exclude a file named foo.py in the root of the project
  | settings.py  # exclude settings file anywhere in the project
)
'''

[tool.isort]
profile = "black"
line_length = 88
auto_identify_namespace_packages = false
force_single_line = true
known_first_party = ["esme"]

[tool.ruff]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.pydocstyle]
ignore = [
    "D105",
    "D107",
    "D203",
    "D213",
]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/customize.html
minversion = "6.0"
addopts = "--doctest-modules -vv --cov=smppai --capture=no --log-cli-level=DEBUG --import-mode=importlib --ignore=tests/smpp tests"
testpaths = [
    "tests",
]
log_format = "%(asctime)s [%(levelname)-8s] [%(filename)s:%(lineno)s] %(message)s"
log_date_format = "%H:%M:%S"

# Reminder:
# '^file1\.py$',   # TOML literal string (single-quotes, no escaping necessary)
# "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping
